# advent_of_code_2024

./: .gitignore  CMakeLists.txt
cmake/: CompilerWarnings.cmake
day01/: CMakeLists.txt  main.cpp
day02/: CMakeLists.txt  main.cpp
day03/: CMakeLists.txt  main.cpp
day04/: CMakeLists.txt  main.cpp
